# django_hackathon_template

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/configs/: settings.py
