[tool.poetry]
name = "django_hackathon_template"
version = "0.1.0"
description = ""
authors = ["Timur"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
djangorestframework = "^3.14.0"
Markdown = "^3.4.3"
django-filter = "^23.2"
django-environ = "^0.10.0"
flake8 = "^6.0.0"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
